初步定义用户模型